# Keyboard-Logger

./: CMakeLists.txt  CPP Keyboard App.cpp  CPP Keyboard App.h  README.md
src/: App.cpp  App.hpp  Frame.hpp
src/data/: layouts.json
src/tools/: helpers.hpp  json.hpp  types.hpp
